force-app/main/default/objects/Site_Content__c/Site_Content__c.object-meta.xml
<CustomObject>
    <description>Lightweight CMS for dynamic page content</description>
    <label>Site Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>