force-app/main/default/objects/Site_Content__c/fields/Content_Body__c.field-meta.xml
<CustomField>
    <fullName>Content_Body__c</fullName>
    <description>The actual content to display</description>
    <label>Content Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>