force-app/main/default/objects/Site_Content__c/fields/Content_Key__c.field-meta.xml
<CustomField>
    <fullName>Content_Key__c</fullName>
    <description>Unique lookup key for programmatic access (e.g., home_hero_headline)</description>
    <externalId>true</externalId>
    <label>Content Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>