force-app/main/default/objects/Site_Content__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether content is displayed on the site</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>